<resources>
    <string name="app_name">StudyBuddies</string>
    <string name="create_post">Create Post</string>
    <string name="enter_post_title_here">Enter post title here…</string>
    <string name="enter_your_post_here">Enter your post here…</string>
    <string name="post">Post</string>
    <string name="recommended_posts">Recommended Posts</string>
    <string name="search">Search…</string>
    <string name="post_title">Post Title</string>
    <string name="post_subject">Post subject</string>
    <string name="rating">Rating</string>
    <string name="posted_by">Posted By:</string>
    <string name="account_name_here">Account Name Here</string>
    <string name="rating_colon">Rating:</string>
    <string name="_0">0</string>
    <string name="title_colon">Title:</string>
    <string name="title_here">Title Here</string>
    <string name="subject_colon">Subject:</string>
    <string name="subject_here">Subject Here</string>
    <string name="description">Description:</string>
    <string name="in_descriptive_writing_the_author_does_not_just_tell_the_reader_what_was_seen_felt_tested_smelled_or_heard_rather_the_author_describes_something_from_their_own_experience_and_through_careful_choice_of_words_and_phrasing_makes_it_seem_real_descriptive_writing_is_vivid_colorful_and_detailed">In descriptive writing, the author does not just tell the reader what was seen, felt, tested, smelled, or heard. Rather, the author describes something from their own experience and, through careful choice of words and phrasing, makes it seem real. Descriptive writing is vivid, colorful, and detailed.</string>
    <string name="comments">Comments:</string>
    <string name="leave_a_comment">Leave a comment…</string>
    <string name="submit">Submit</string>
    <string name="comment_here">Comment Here</string>
    <string name="profile">Profile</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="comment_subject_here">Comment subject here</string>
    <string name="search_button">Search Button</string>
    <string name="search_here">Search here</string>
    <string name="title_string">Title</string>
    <string name="search_string">Search</string>
    <string name="view_profile">View Profile</string>
    <string name="filter">Filter</string>
    <string name="filter_button">FilterButton</string>
    <string name="select_the_subjects_you_wish_to_view">Select the subjects you wish to view</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username:</string>
    <string name="user">User</string>
    <string name="rating_number">ratingNumber</string>
    <string name="strong_subjects">Strong Subjects:</string>
    <string name="weak_subjects">Weak Subjects:</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="strong1">Strong1</string>
    <string name="strong2">Strong2</string>
    <string name="strong3">Strong3</string>
    <string name="weak1">Weak1</string>
    <string name="weak2">Weak2</string>
    <string name="weak3">Weak3</string>
    <string name="post_image">Post Image</string>
    <string name="upload_an_image">Upload An Image</string>
    <string name="comment_username_here">Comment username here</string>
    <string name="delete_button">DeleteButton</string>
    <string name="title">Title</string>
    <string name="post_description">Post description</string>
    <string name="subject">Subject</string>

    <array name="subjects">
        <item>-</item>
        <item>Introduction to Databases</item>
        <item>Algorithms</item>
        <item>Artificial Intelligence</item>
        <item>Advanced Software Engineering</item>
        <item>Operating Systems</item>
        <item>Compiler Techniques</item>
    </array>
</resources>