<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="20sp"
    tools:context=".ViewProfileUI">

    <TextView
        android:id="@+id/viewProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/view_profile"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewProfileUsernameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileTitle" />

    <TextView
        android:id="@+id/viewProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/user"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/viewProfileUsernameTag"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileTitle" />

    <TextView
        android:id="@+id/viewProfileRatingTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/rating_colon"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileUsernameTag" />

    <TextView
        android:id="@+id/viewProfileRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/rating_number"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/viewProfileRatingTag"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileUsername" />

    <TextView
        android:id="@+id/viewProfileStrongSubTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/strong_subjects"
        android:textColor="#050505"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileRatingTag" />

    <TextView
        android:id="@+id/viewProfileWeakSubTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/weak_subjects"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileStrongSubTag" />

    <TextView
        android:id="@+id/viewProfileStrong1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/strong1"
        android:textColor="#040404"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/viewProfileStrongSubTag"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileRating" />

    <TextView
        android:id="@+id/viewProfileStrong2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/strong2"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileStrong1" />

    <TextView
        android:id="@+id/viewProfileStrong3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/strong3"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileStrong2" />

    <TextView
        android:id="@+id/viewProfileWeak1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/weak1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/viewProfileWeakSubTag"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileStrong3" />

    <TextView
        android:id="@+id/viewProfileWeak2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/weak2"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileWeak1" />

    <TextView
        android:id="@+id/viewProfileWeak3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/weak3"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfileWeak2" />

    <Button
        android:id="@+id/viewProfileBackButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewProfileToEditButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/edit_profile"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewProfileBackButton" />
</androidx.constraintlayout.widget.ConstraintLayout>