<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuUI">

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/recommended_posts"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mainMenuFilterButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/filter_button"
        android:src="@drawable/ic_baseline_filter_list_24"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@id/mainMenuTitle"
        app:layout_constraintRight_toLeftOf="@id/mainMenuSearchButton"
        app:layout_constraintTop_toTopOf="@+id/mainMenuTitle" />

    <ImageButton
        android:id="@+id/mainMenuSearchButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/search_button"
        android:text="@string/search"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@id/mainMenuTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainMenuTitle" />

    <Button
        android:id="@+id/createPostButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/create_post"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/mainMenuRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainMenuRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintBottom_toTopOf="@+id/createPostButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle" />

    <Button
        android:id="@+id/viewProfileButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/view_profile"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/mainMenuRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>