<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singleCl"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/singlePostTitle"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/post_title"
        android:textColor="#040404"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/singlePostSubject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/singlePostSubject"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/post_subject"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePostTitle" />

    <TextView
        android:id="@+id/singleRating"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/rating"
        android:textColor="#101010"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/singlePostSubject"
        app:layout_constraintTop_toBottomOf="@+id/singlePostTitle" />

    <ImageButton
        android:id="@+id/deletePostButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/delete_button"
        android:tint="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/singlePostTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/singlePostTitle"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>