<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileUI">

    <TextView
        android:id="@+id/editProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/edit_profile"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editProfileUsernameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileTitle" />

    <TextView
        android:id="@+id/editProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/user"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/editProfileUsernameTag"
        app:layout_constraintTop_toBottomOf="@+id/editProfileTitle" />

    <TextView
        android:id="@+id/editProfileRatingTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/rating_colon"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileUsernameTag" />

    <TextView
        android:id="@+id/editProfileRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/rating_number"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/editProfileRatingTag"
        app:layout_constraintTop_toBottomOf="@+id/editProfileUsername" />

    <TextView
        android:id="@+id/editProfileStrongSubTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/strong_subjects"
        android:textColor="#050505"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileRatingTag" />

    <TextView
        android:id="@+id/editProfileWeakSubTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/weak_subjects"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileStrongSubTag" />

    <Spinner
        android:id="@+id/editProfileStrongSub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/subjects"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintTop_toBottomOf="@+id/editProfileStrongSubTag"
        tools:layout_editor_absoluteX="27dp" />

    <Spinner
        android:id="@+id/editProfileStrongSub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/subjects"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintTop_toBottomOf="@+id/editProfileStrongSub1"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/editProfileStrongSub3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/subjects"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintTop_toBottomOf="@+id/editProfileStrongSub2"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/editProfileWeakSub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/subjects"
        app:layout_constraintTop_toBottomOf="@+id/editProfileWeakSubTag"
        tools:layout_editor_absoluteX="-16dp" />

    <Spinner
        android:id="@+id/editProfileWeakSub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/subjects"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintTop_toBottomOf="@+id/editProfileWeakSub1"
        tools:layout_editor_absoluteX="-25dp" />

    <Spinner
        android:id="@+id/editProfileWeakSub3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/subjects"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintTop_toBottomOf="@+id/editProfileWeakSub2"
        tools:layout_editor_absoluteX="-16dp" />


    <Button
        android:id="@+id/editProfileBackButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editProfileSaveButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editProfileBackButton" />
</androidx.constraintlayout.widget.ConstraintLayout>