<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuUI">

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/recommended_posts"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainMenuSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle" />

    <Button
        android:id="@+id/createPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="281dp"
        android:layout_marginRight="281dp"
        android:layout_marginBottom="30dp"
        android:text="@string/create_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainMenuRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/createPostButton"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle"
        tools:layout_editor_absoluteX="-16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>